final commit before presenting 08.05.25

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="header">
+        <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('signup') }}">Sign Up</a>
         <a href="{{ url_for('login') }}">Log In</a>
     </div>
