--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,13 @@ Homepage
 {% endblock %}
 
 {% block content %}
-<h1>Homepage</h1>
+<div class="homepage-intro">
+    <h1>Welcome to TaskTrackerApp!</h1>
+
+    <p>
+        The purpose of this project is to create a fully functioning application that allows ambitious
+        people to track their progress of completing daily goals. It could be anything — starting with drinking water 
+        and ending with working for a specific amount of time.
+    </p>
+</div>
 {% endblock %}
